--- a/assets/scss/scss-utilities/utilities.scss
+++ b/assets/scss/scss-utilities/utilities.scss
@@ -4,7 +4,7 @@
 
 // Color
 
-$color-primary                                                  : #1F2FBE; 
+$color-primary                                                  : #2563EB; 
 $color-secondary                                                : #357EC2; 
 $color-tertiary                                                 : #3E35C2; 
 $color-quarter                                                  : #D9EBF3; 
@@ -15,6 +15,14 @@ $color-black                                                    : #000000;
 $color-grey-super-light                                         : #FAFAFA;
 $color-grey-light                                               : #E4E4E7;
 $color-grey                                                     : #71717A;
+
+$color-blue                                                     : #2563EB;
+$color-brown                                                    : #CA8A04;
+$color-green                                                    : #16A34A;
+$color-indigo                                                   : #4F46E5;
+$color-orange                                                   : #EA580C;
+$color-purple                                                   : #9333EA;
+$color-red                                                      : #DC2626;
 
 // =============================================================================
 // String Replace
